--- a/.github/workflows/tag-release.yml
+++ b/.github/workflows/tag-release.yml
@@ -11,6 +11,9 @@ jobs:
   tag:
     if: github.event.pull_request.merged == true && startsWith(github.event.pull_request.head.ref, 'release/')
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      actions: write
     env:
       RELEASE_PAT: ${{ secrets.RELEASE_PAT }}
     steps:
@@ -55,16 +58,17 @@ jobs:
         env:
           REPOSITORY: ${{ github.repository }}
           TAG: v${{ steps.version.outputs.version }}
+          ACTIONS_TOKEN: ${{ github.token }}
         run: |
-          if [ -z "$RELEASE_PAT" ]; then
-            echo "Missing RELEASE_PAT secret. Cannot dispatch publish workflow."
+          if [ -z "$ACTIONS_TOKEN" ]; then
+            echo "Missing GitHub token. Cannot dispatch publish workflow."
             exit 1
           fi
           PAYLOAD=$(printf '{"ref":"%s"}' "$TAG")
           RESPONSE=$(curl -s -o /tmp/dispatch-response -w "%{http_code}" \
             -X POST \
             -H "Accept: application/vnd.github+json" \
-            -H "Authorization: Bearer ${RELEASE_PAT}" \
+            -H "Authorization: Bearer ${ACTIONS_TOKEN}" \
             "https://api.github.com/repos/${REPOSITORY}/actions/workflows/publish.yml/dispatches" \
             -d "$PAYLOAD")
           if [ "$RESPONSE" != "204" ]; then
